# IHEngine

./: .gitignore  CMakeLists.txt  README.md
Base/: BasicSystem.hpp  ChangeState.hpp  ChangeStates.hpp  States.hpp  StatesChanger.hpp
Base/src/: ChangeStates.cpp  States.cpp  StatesChanger.cpp
Core/: Colors.hpp  CyclePack.hpp  Entities.hpp  EventsPack.hpp  Monitor.hpp  Point2.hpp  Point3.hpp  Point4.hpp  Scene.hpp  Scenes.hpp  Time.hpp  Window.hpp  WrapperOfManagers.hpp
Core/Engine/: CyclePack.hpp  Engine.hpp  EntitiesManager.hpp  Scene.hpp  SceneManager.hpp
Core/src/: Colors.cpp  Engine.cpp  EntitiesManager.cpp  Point2.cpp  Point3.cpp  Point4.cpp  Scene.cpp  SceneManager.cpp
Examples/TestCore/: TestCore  main.cpp
Examples/TestCore/Scripts/CyclePacks/: TestPack.hpp
Math/: Angle.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
Renderer/: DrawnObject.hpp  Renderer.hpp
Renderer/Figures/: Figure.hpp  Rectangle.hpp
src/Core/: CyclePack.cpp  Entities.cpp  Monitor.cpp  Scene.cpp  Scenes.cpp  Time.cpp  Window.cpp  WrapperOfManagers.cpp
src/Math/: Angle.cpp
